# FRED-

./: .env.example  .gitignore  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  start.ps1  vercel.json
.claude/: settings.json
apps/server-py/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/server-py/app/: config.py  main.py  models.py
apps/server-py/app/data/: indicators.py  translations.py
apps/server-py/app/middleware/: auth.py
apps/server-py/app/routes/: chat.py  chat_stream.py  fred.py  portfolio.py  sessions.py  stocks.py
apps/server-py/app/services/: fred_service.py  orchestrator.py  stock_service.py  supabase_service.py
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/web/src/app/: App.tsx
apps/web/src/components/charts/: ChartOverlay.tsx  ChartWidget.tsx
apps/web/src/components/chat/: ChipInput.tsx  DragChip.tsx  MessageList.tsx  TerminalMessage.tsx
apps/web/src/components/indicators/: IndicatorCard.tsx
apps/web/src/components/layout/: LeftPanel.tsx  RightPanel.tsx  TopBar.tsx
apps/web/src/components/portfolio/: PortfolioDropModal.tsx  PortfolioSection.tsx
apps/web/src/components/stocks/: StockCard.tsx
apps/web/src/hooks/: useChat.ts  useDragDrop.ts  useFredData.ts  useTranslation.ts
apps/web/src/locales/: en.json  ko.json
apps/web/src/pages/: AuthPage.tsx
apps/web/src/services/: api.ts  supabase.ts
apps/web/src/stores/: authStore.ts  chatStore.ts  portfolioStore.ts  sessionHistoryStore.ts  uiStore.ts
apps/web/src/styles/: globals.css
(+2 files in other folders)
